tooling/nargo_cli/tests/snapshots/execution_failure/regression_8231/execute__tests__acir_stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
warning: variable does not need to be mutable
   ┌─ src/main.nr:20:15
   │
20 │ fn func_1(mut a: u64, mut b: [bool; 1], mut c: [bool; 1]) -> (i64, [bool; 1]) {
   │               -
   │

warning: variable does not need to be mutable
   ┌─ src/main.nr:20:27
   │
20 │ fn func_1(mut a: u64, mut b: [bool; 1], mut c: [bool; 1]) -> (i64, [bool; 1]) {
   │                           -
   │

warning: variable does not need to be mutable
   ┌─ src/main.nr:20:45
   │
20 │ fn func_1(mut a: u64, mut b: [bool; 1], mut c: [bool; 1]) -> (i64, [bool; 1]) {
   │                                             -
   │

warning: Return variable contains a constant value
   ┌─ src/main.nr:14:5
   │  
14 │ ╭     if a {
15 │ │         10065726339818009114
16 │ │     } else {
17 │ │         3961249039905748235
18 │ │     }
   │ ╰─────' This variable contains a value which is constrained to be a constant. Consider removing this value as additional return values increase proving/verification time
   │  
   = Call stack:
     1: main
             at src/main.nr:14:5

bug: Assertion is always false: attempt to add with overflow
   ┌─ src/main.nr:29:21
   │
29 │                 > ((a + a) as u128)
   │                     ----- As a result, the compiled circuit is ensured to fail. Other assertions may also fail during execution
   │
   = Call stack:
     1: main
             at src/main.nr:5:16
     2: func_1
             at src/main.nr:29:21

error: Assertion failed: attempt to add with overflow
   ┌─ src/main.nr:29:21
   │
29 │                 > ((a + a) as u128)
   │                     -----
   │
   = Call stack:
     1: main
             at src/main.nr:5:16
     2: func_1
             at src/main.nr:29:21

Failed assertion
