tooling/nargo_cli/tests/snapshots/execution_failure/regression_8231/execute__tests__brillig_stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
warning: variable does not need to be mutable
   ┌─ src/main.nr:20:15
   │
20 │ fn func_1(mut a: u64, mut b: [bool; 1], mut c: [bool; 1]) -> (i64, [bool; 1]) {
   │               -
   │

warning: variable does not need to be mutable
   ┌─ src/main.nr:20:27
   │
20 │ fn func_1(mut a: u64, mut b: [bool; 1], mut c: [bool; 1]) -> (i64, [bool; 1]) {
   │                           -
   │

warning: variable does not need to be mutable
   ┌─ src/main.nr:20:45
   │
20 │ fn func_1(mut a: u64, mut b: [bool; 1], mut c: [bool; 1]) -> (i64, [bool; 1]) {
   │                                             -
   │

error: Assertion failed: attempt to add with overflow
   ┌─ src/main.nr:29:21
   │
29 │                 > ((a + a) as u128)
   │                     -----
   │
   = Call stack:
     1: main
             at src/main.nr:5:16
     2: func_1
             at src/main.nr:29:21

Failed assertion
